# rust-fullstack-app-template

./: Cargo.toml  README.md
client/: index.html  package-lock.json
client/src/: App.css  App.tsx  types.d.ts
src/: main.rs  types.rs
